# litellm-gigachat

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  build_package.py  config.yml  gigachat.py  publish_package.py  pyproject.toml  requirements.txt  start_proxy.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: CHANGELOG.md  CLI_FEATURES.md  CONTRIBUTING.md  DESCRIPTION.md  FAQ.md  GIGACHAT_COMPATIBILITY.md  KEYWORDS.md  README.md  TEST_REQUESTS.md  _config.yml  index.md  robots.txt  sitemap.xml
docs/_includes/: head.html
docs/_layouts/: default.html
examples/: __init__.py  basic_usage.py  examples.py  gigachat_transformer_example.py  internal_gigachat_example.py
src/: __init__.py
src/callbacks/: __init__.py  content_handler.py
src/core/: __init__.py
src/litellm_gigachat/: __init__.py
src/litellm_gigachat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/litellm_gigachat/callbacks/: content_handler.py  internal_header_callback.py  model_sync_callback.py  proxy_provider_callback.py  token_callback.py
src/litellm_gigachat/cli/: __init__.py  main.py  utils.py
src/litellm_gigachat/cli/commands/: __init__.py  env_check.py  examples.py  help_examples.py  refresh_token.py  start.py  test.py  token_info.py  version.py
src/litellm_gigachat/core/: gigachat_client.py  internal_header_manager.py  model_sync.py  multi_model_sync.py  proxy_provider_manager.py  token_manager.py
src/litellm_gigachat/proxy/: __init__.py  server.py
src/proxy/: server.py
tests/: .env.mock_test  __init__.py  config_mock_test.yml  gigachat.py  mock_provider_1.py  mock_provider_2.py  mock_proxy_provider.py  test_basic_functionality.py  test_cline_integration.py  test_content_handler.py  test_gigachat_transformer.py  test_internal_gigachat.py  test_proxy.py  test_proxy_provider_integration.py
tools/: start_proxy.py
