[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litellm-gigachat"
version = "0.1.0"
description = "Полнофункциональная интеграция GigaChat API с LiteLLM"
readme = "README.md"
license = "MIT"
authors = [
    {name = "LiteLLM GigaChat Team", email = "clack008@gmail.com"}
]
maintainers = [
    {name = "LiteLLM GigaChat Team", email = "clack008@gmail.com"}
]
keywords = [
    "gigachat",
    "litellm", 
    "openai",
    "api",
    "proxy",
    "sber",
    "russian",
    "llm",
    "ai",
    "chatbot"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "litellm[proxy]==1.65.1",
    "requests>=2.31.0,<3.0.0",
    "certifi>=2023.7.22",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/stp008/litellm-gigachat"
Documentation = "https://github.com/stp008/litellm-gigachat/blob/main/docs/README.md"
Repository = "https://github.com/stp008/litellm-gigachat.git"
"Bug Tracker" = "https://github.com/stp008/litellm-gigachat/issues"

[project.scripts]
litellm-gigachat = "litellm_gigachat.proxy.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
litellm_gigachat = ["*.yml", "*.yaml"]
